# debug-uvx-gitlfs

./: .gitattributes  README.md  pyproject.toml
src/my_package/: git-lfs.txt  main.py
